# grblkotlin

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/grblkotlin/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/grblkotlin/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/grblkotlin/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
